tests/ui/rfcs/rfc-2632-const-trait-impl/std-impl-gate.stock.stderr
error[E0015]: cannot call non-const fn `<Vec<usize> as Default>::default` in constant functions
  --> $DIR/std-impl-gate.rs:13:5
   |
LL |     Default::default()
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
